@@ -24,6 +24,8 @@ public class World {
 
     /**
      * Instantiates a new World.
+     *
+     * @param serviceProvider the service provider
      */
     public World(ServiceProvider serviceProvider) {
         this.serviceProvider = serviceProvider;
@@ -48,26 +50,57 @@ public class World {
         }
     }
 
+    /**
+     * Add entities.
+     *
+     * @param entities the entities
+     */
     public void addEntities(Entity... entities) {
-        this.entities.addAll(Set.of(entities));
+        Set<Entity> entitySet = Set.of(entities);
+
+        this.entities.addAll(entitySet);
+
+        systems.forEach(system -> system.entitiesAdded(entitySet));
     }
 
+    /**
+     * Add entities.
+     *
+     * @param entities the entities
+     */
     public void addEntities(Collection<? extends Entity> entities) {
         this.entities.addAll(entities);
+
+        systems.forEach(system -> system.entitiesAdded(entities));
     }
 
+    /**
+     * Remove entity.
+     *
+     * @param entity the entity
+     */
     public void removeEntity(Entity entity) {
         entities.remove(entity);
 
         systems.forEach(system -> system.entityRemoved(entity));
     }
 
+    /**
+     * Remove entities.
+     *
+     * @param entities the entities
+     */
     public void removeEntities(Collection<? extends Entity> entities) {
         this.entities.removeAll(entities);
 
         entities.forEach(entity -> systems.forEach(system -> system.entityRemoved(entity)));
     }
 
+    /**
+     * Remove if.
+     *
+     * @param entities the entities
+     */
     public void removeIf(Predicate<? super Entity> entities) {
         this.entities.removeIf(entities);
     }
@@ -94,6 +127,8 @@ public class World {
 
     /**
      * Update all the Systems contained in World.
+     *
+     * @param deltaTime the delta time
      */
     public void update(Time deltaTime) {
         for (EntitySystem system : systems) {
@@ -144,11 +179,11 @@ public class World {
      */
     @SafeVarargs
     public final Set<Entity> getEntitiesWithAny(Class<? extends Component>... components) {
-        Set<Class<? extends Component>> entityComponents = Set.of(components);
+        Set<Class<? extends Component>> entityComponents = new HashSet<>(Arrays.asList(components));
 
         return entities
                 .stream()
-                .filter(entity -> !Collections.disjoint(Set.of(entity.getComponents().keySet()), entityComponents))
+                .filter(entity -> !Collections.disjoint(new HashSet<>(entity.getComponents().keySet()), entityComponents))
                 .collect(Collectors.toSet());
     }
 
@@ -166,8 +201,30 @@ public class World {
                 .orElse(null);
     }
 
+    /**
+     * Clear.
+     */
+    public void clear() {
+        entities.clear();
+
+        systems.clear();
+    }
+
+    /**
+     * Gets service provider.
+     *
+     * @return the service provider
+     */
     public ServiceProvider getServiceProvider() {
         return serviceProvider;
     }
 
+    /**
+     * Gets entities.
+     *
+     * @return the entities
+     */
+    public Set<Entity> getEntities() {
+        return entities;
+    }
 }
